remove index from db tables

--- a/rta.ipynb
+++ b/rta.ipynb
@@ -795,8 +795,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_sql(\"battle_logs_enriched\", engine, if_exists=\"replace\")\n",
-    "by_player.to_sql(\"battle_logs_by_player\", engine, if_exists=\"replace\")"
+    "df.to_sql(\"battle_logs_enriched\", engine, if_exists=\"replace\", index=False)\n",
+    "by_player.to_sql(\"battle_logs_by_player\", engine, if_exists=\"replace\", index=False)"
    ]
   },
   {
